--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "dependencies": {
     "@amplitude/node": "^1.9.1",
     "@honeybadger-io/js": "^3.2.7",
-    "@vendia/serverless-express": "^4.10.1",
+    "@vendia/serverless-express": "^4.3.9",
     "aws-lambda": "^1.0.6",
     "aws-sdk": "^2.1046.0",
     "axios": "^0.24.0",
@@ -50,6 +50,7 @@
   },
   "devDependencies": {
     "@types/aws-lambda": "8.10.86",
+    "@types/cookie-parser": "^1.4.3",
     "@types/express": "^4.17.13",
     "@types/jest": "^27.4.0",
     "husky": "^7.0.4",
@@ -59,9 +60,10 @@
     "serverless": "^2.69.0",
     "serverless-domain-manager": "^5.2.0",
     "serverless-dynamodb-local": "^0.2.40",
-    "serverless-offline": "^8.0.0",
-    "serverless-plugin-git-variables": "^5.1.0",
+    "serverless-offline": "^8.8.1",
+    "serverless-plugin-git-variables": "^5.2.0",
     "serverless-plugin-typescript": "^1.2.0",
+    "serverless-pseudo-parameters": "^2.6.1",
     "supertest": "^6.1.6",
     "ts-jest": "^27.1.2",
     "ts-node": "^10.0.0",
