--- a/.env-ci
+++ b/.env-ci
@@ -5,3 +5,7 @@ AWS_DEFAULT_REGION="us-west-1"
 REGION="us-west-1"
 ENV=local
 ROLE_NAME=local
+PUSHER_APP_ID=1502377
+PUSHER_API_KEY="c56e77b988119871f7d3"
+PUSHER_API_SECRET="1c384e9d103f926cb170"
+PUSHER_CLUSTER="mt1"
