--- a/package.json
+++ b/package.json
@@ -48,6 +48,8 @@
     "node-input-validator": "^4.5.0",
     "pusher": "^5.0.1",
     "shortid": "^2.2.16",
+    "spotify": "^0.3.0",
+    "spotify-web-api-node": "^5.0.2",
     "validator": "^13.7.0"
   },
   "devDependencies": {
