--- a/.env
+++ b/.env
@@ -11,3 +11,5 @@ PUSHER_APP_ID=1502377
 PUSHER_API_KEY="c56e77b988119871f7d3"
 PUSHER_API_SECRET="1c384e9d103f926cb170"
 PUSHER_CLUSTER="mt1"
+SPOTIFY_CLIENT_ID='a3a224d8b0ad478bb1cbf06daf921902'
+SPOTIFY_CLIENT_SECRET='dfa7418bacdf41099e23a733cf2bcd78'
