Update needed data

--- a/.env-ci
+++ b/.env-ci
@@ -1,6 +1,6 @@
 AWS_ACCESS_KEY_ID="local"
 AWS_SECRET_ACCESS_KEY="local"
-AWS_DYNAMODB_ENDPOINT="http://localhost:4567"
+AWS_DYNAMODB_ENDPOINT="http://localstack-mesibot:4566"
 AWS_DEFAULT_REGION="us-west-1"
 REGION="us-west-1"
 ENV=local
