--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "moment-timezone": "^0.5.28",
     "node-input-validator": "^4.5.0",
     "pusher": "^5.0.1",
+    "request": "^2.88.2",
     "shortid": "^2.2.16",
     "spotify": "^0.3.0",
     "spotify-web-api-node": "^5.0.2",
