--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 AWS_ACCESS_KEY_ID="local"
 AWS_SECRET_ACCESS_KEY="local"
-AWS_DYNAMODB_ENDPOINT="http://localstack-moontower:4566"
+AWS_DYNAMODB_ENDPOINT="http://localstack-mesibot:4566"
 AWS_DEFAULT_REGION="us-west-1"
 AMPLITUDE_HTTP_API_URL="https://api.amplitude.com/2/httpapi"
 REGION="us-west-1"
@@ -11,3 +11,12 @@ PUSHER_APP_ID=1502377
 PUSHER_API_KEY="c56e77b988119871f7d3"
 PUSHER_API_SECRET="1c384e9d103f926cb170"
 PUSHER_CLUSTER="mt1"
+
+SLACK_TOKEN="xoxb-332061627350-4311658138695-G6CedZI6h4J10yztAGx77FkG"
+
+SLACK_IDENTITY_APP_CLIENT_ID=332061627350.4326173103778
+SLACK_IDENTITY_APP_CALLBACK_URL="https://mesibot.ngrok.io/auth/slack/grant/success"
+SLACK_IDENTITY_APP_CLIENT_SECRET=c710e285d1b1037bc1d79c484537a21a
+SLACK_IDENTITY_APP_STATE_SECRET="mesibot-state-secret"
+SPOTIFY_CLIENT_ID=a3a224d8b0ad478bb1cbf06daf921902
+SPOTIFY_CLIENT_SECRET=dfa7418bacdf41099e23a733cf2bcd78
